--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@ body {
 .card {
   background-color: hsl(0, 0%, 100%);
   border-radius: 20px;
-  width: 350px;
+  width: 20rem;
+  text-align: center;
 }
 
 .inside {
@@ -22,9 +23,10 @@ body {
 img {
   width: 100%;
   border-radius: 20px;
+  
 }
 
-.desc h4 {
+.desc h1 {
   color: hsl(218, 44%, 22%);
   font-weight: 700;
 }
